--- a/MyRM/MyRM.csproj
+++ b/MyRM/MyRM.csproj
@@ -49,8 +49,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
     <Compile Include="Resource.cs" />
+    <Compile Include="StorageContext.cs" />
     <Compile Include="StorageManager.cs" />
     <Compile Include="StoragePage.cs" />
+    <Compile Include="StoragePageTable.cs" />
+    <Compile Include="StoragePageTableEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TP\TP.csproj">
