--- a/MyRMTests/MyRMTests.csproj
+++ b/MyRMTests/MyRMTests.csproj
@@ -46,7 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoragePageUnitTest.cs" />
+    <Compile Include="StorageManagerTests.cs" />
+    <Compile Include="StoragePageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyRM\MyRM.csproj">
