--- a/MyRMTests/MyRMTests.csproj
+++ b/MyRMTests/MyRMTests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageManagerTests.cs" />
+    <Compile Include="StoragePageTableTests.cs" />
     <Compile Include="StoragePageTests.cs" />
   </ItemGroup>
   <ItemGroup>
