--- a/MyRM/MyRM.csproj
+++ b/MyRM/MyRM.csproj
@@ -44,16 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DS\ListReader.cs" />
+    <Compile Include="DS\ListWriter.cs" />
+    <Compile Include="DS\ListHdr.cs" />
     <Compile Include="MyLM.cs" />
     <Compile Include="MyRM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="StorageContext.cs" />
+    <Compile Include="StorageFreeSpaceManager.cs" />
     <Compile Include="StorageManager.cs" />
     <Compile Include="StoragePage.cs" />
     <Compile Include="StoragePageTable.cs" />
-    <Compile Include="StoragePageTableEntry.cs" />
+    <Compile Include="DS\PageTableItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TP\TP.csproj">
