implement WriteResource and Commit in StorageManager

--- a/MyRM/MyRM.csproj
+++ b/MyRM/MyRM.csproj
@@ -44,9 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DS\DBHdr.cs" />
     <Compile Include="DS\ListReader.cs" />
     <Compile Include="DS\ListWriter.cs" />
     <Compile Include="DS\ListHdr.cs" />
+    <Compile Include="DS\RIndexItem.cs" />
     <Compile Include="MyLM.cs" />
     <Compile Include="MyRM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="StoragePage.cs" />
     <Compile Include="StoragePageTable.cs" />
     <Compile Include="DS\PageTableItem.cs" />
+    <Compile Include="StorageResourceIndex.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TP\TP.csproj">
