--- a/MyRMTests/MyRMTests.csproj
+++ b/MyRMTests/MyRMTests.csproj
@@ -45,6 +45,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LM_UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StorageManagerTests.cs" />
     <Compile Include="StoragePageTableTests.cs" />
