--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SerializableExceptions.cs" />
     <Compile Include="LockableID.cs" />
     <Compile Include="RID.cs" />
     <Compile Include="CommandLineParser.cs" />
