implement durable 2 phase commit in the StorageManager - StorageManager keeps a list of prepared transactions - StorageManager persists the data needed to commit the prepared   transactions to disk - Wired up RM to call prepare on StorageManager

--- a/MyRM/MyRM.csproj
+++ b/MyRM/MyRM.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DS\ListWriter.cs" />
     <Compile Include="DS\ListHdr.cs" />
     <Compile Include="DS\IndexItem.cs" />
+    <Compile Include="DS\TransItem.cs" />
     <Compile Include="MyLM.cs" />
     <Compile Include="MyRM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="StoragePageTable.cs" />
     <Compile Include="DS\PageTableItem.cs" />
     <Compile Include="StorageIndex.cs" />
+    <Compile Include="StorageTransactionTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TP\TP.csproj">
