--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -45,7 +45,7 @@
     <Compile Include="RID.cs" />
     <Compile Include="CommandLineParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tp.cs" />
+    <Compile Include="TP.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
