add tests for StoragePage class and and prefix to test names to make them easier to find.

--- a/MyRMTests/MyRMTests.csproj
+++ b/MyRMTests/MyRMTests.csproj
@@ -61,6 +61,9 @@
       <Name>TP</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Shadow Include="Test References\MyRM.accessor" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
