--- a/CSEP545/CSEP545.csproj
+++ b/CSEP545/CSEP545.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
+    <Compile Include="TPTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyRM\MyRM.csproj">
