--- a/MyRMTests/MyRMTests.csproj
+++ b/MyRMTests/MyRMTests.csproj
@@ -33,11 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -55,6 +62,10 @@
     <ProjectReference Include="..\MyRM\MyRM.csproj">
       <Project>{D632D16C-AFD4-4817-81ED-EC73552D4E1D}</Project>
       <Name>MyRM</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyTM\MyTM.csproj">
+      <Project>{B2C1FFA8-CC67-4193-8912-D3E93741B328}</Project>
+      <Name>MyTM</Name>
     </ProjectReference>
     <ProjectReference Include="..\TP\TP.csproj">
       <Project>{CE08CD45-05C9-49E9-966C-2E893060B316}</Project>
