--- a/CSEP545/CSEP545.csproj
+++ b/CSEP545/CSEP545.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BasicDemo.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="DutchAuctionDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RMDemo.cs" />
